<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViagemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/azul"
        android:orientation="vertical">


        <TextView
            style="@style/titulo"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/novaViagem" />

    </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TextView android:text="@string/destino" />

            <EditText
                android:id="@+id/editDestino"
                android:inputType="text" />

            <TextView android:text="@string/tipoViagem" />

            <RadioGroup
                android:id="@+id/groupTipoViagem"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioLazer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lazer" />

                <RadioButton
                    android:id="@+id/radioNegocio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:text="@string/negocios" />
            </RadioGroup>

            <TableRow>

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/dataChegada" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/dataSaida" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btndataChegada"
                    android:onClick="onSelecionarData"
                    android:text="@string/selecione" />

                <Button
                    android:id="@+id/btndataSaida"
                    android:onClick="onSelecionarData"
                    android:text="@string/selecione" />
            </TableRow>

            <TextView android:text="@string/orcamento" />

            <EditText
                android:id="@+id/orcamento"
                android:inputType="numberDecimal" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/quantidadedepessoas" />

                <EditText
                    android:id="@+id/quantidadedePessoas"
                    android:inputType="number" />
            </TableRow>

            <Button android:text="@string/salvar"/>

        </TableLayout>

    </LinearLayout>

</ScrollView>