<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GastoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/azul"
            android:orientation="vertical">

            <TextView
                style="@style/titulo"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/novoGasto" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tipoGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipoGasto" />

            <Spinner
                android:id="@+id/spnTipoGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/tipoGasto" />


            <TableRow>

                <TextView
                    android:id="@+id/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/valor" />

                <TextView
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/data" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/editValor"
                    android:layout_width="191dp"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/btnData"
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:onClick="onSelecionarDataGasto"
                    android:text="@string/mascara" />
            </TableRow>

            <TextView
                android:id="@+id/descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricao" />

            <EditText
                android:id="@+id/editDescricao"
                android:inputType="" />

            <TextView
                android:id="@+id/local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local" />

            <EditText
                android:id="@+id/editLocal"
                android:inputType="" />

            <Button
                android:id="@+id/btnSalvar"
                android:text="@string/salvar" />

        </TableLayout>

    </LinearLayout>
</ScrollView>